2002-07-22  Keith Seitz  <keiths@redhat.com>

	* mi-cli.exp: Use mi_run_to_main to get to main. Don't use "run".
	Refine result string for "-interpreter-exec console bougs" test.
	
2002-06-25  Keith Seitz  <keiths@redhat.com>

	* mi-cli.exp: Add tests to check if list_command in the console
	is synchronized with MI's state.

2002-06-24  Keith Seitz  <keiths@redhat.com>

	* mi-cli.exp: New file.

2002-06-19  Keith Seitz  <keiths@redhat.com>

	* mi1-basics.exp, mi1-break,.exp mi1-console.exp, mi1-disassemble.exp,
	mi1-eval.exp, mi1-hack-cli.exp, mi1-read-memory.exp, mi1-regs.exp,
	mi1-return.exp, mi1-simplerun.exp, mi1-stack.exp, mi1-stepi.exp,
	mi1-until.exp, mi1-var-block.exp, mi1-var-child.exp, mi1-var-cmd.exp,
	mi1-var-display.exp mi1-watch.exp: New files.
	* mi-break.exp, mi-console.exp, mi-disassemble.exp,
	mi-eval.exp, mi-return.exp, mi-simplerun.exp, mi-stack.exp, mi-stepi.exp, 
	mi-until.exp, mi-var-block.exp, mi-var-child.exp, mi-var-cmd.exp,
	mi-var-display.exp mi-watch.exp: Update to conform to MI2
	notify-async-output (events).

2002-03-04  Michael Chastain  <mec@shout.net>

	* mi-var-cmd.exp: In test "create local variable func",
	accommodate gcc v3 function signature.
	* mi0-var-cmd-exp: Ditto.

2002-02-05  Jim Blandy  <jimb@redhat.com>

	* mi-regs.exp: Various cleanups for SPARC-only tests.
	(test_breakpoints_creation_and_listing): Format of breakpoint
	table has changed.
	(sparc_register_tests): Expand floating-point number regexp to
	recognize NaN values, too.  Replace ineffectual single backslash
	before a hyphen with a double backslash.  Don't check the exact
	numbers of the registers which have changed, since there's no way
	to know which registers changed, exactly; just check that the
	result is well-formed.
	* mi0-regs.exp: (sparc_register_tests): Same as for
	sparc_register_tests in mi-regs.exp.

	* mi-var-child.exp ("get children of struct_declarations", "get
	children of struct_declarations.s2.u2.u1s2", "get children of